--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,9 +11,10 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.webp">
-  
+
   <link rel="stylesheet" href="Bootstrap.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -38,7 +39,8 @@
       -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
       background-color: #F5F5F5;
     }
-    label{
+
+    label {
       margin-bottom: 0px;
     }
   </style>
@@ -49,6 +51,7 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
+  <div id="searchWindow"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
