--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,9 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.webp">
 
   <link rel="stylesheet" href="Bootstrap.css" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
+    crossorigin="anonymous">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
