--- a/client/public/index.html
+++ b/client/public/index.html
@@ -41,6 +41,7 @@
   </noscript>
   <div id="root"></div>
   <div id="searchWindow"></div>
+  <div id="reportWindow"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
