change in print barcode report

--- a/client/public/Reports/patientRegistrationBarcode.html
+++ b/client/public/Reports/patientRegistrationBarcode.html
@@ -1,6 +1,4 @@
 <div>
-    <algaehList data-paramter="">
-        Hello
-    </algaehList>
+    <canvas algaeh-barcode="patient_code"></canvas>
 
 </div>
