--- a/client/public/Reports/patientRegistrationBarcode.html
+++ b/client/public/Reports/patientRegistrationBarcode.html
@@ -3,15 +3,20 @@
     <p>Pateint Name</p>
     <p data-parameter="full_name"></p>
     <table>
-        <tr>
-            <th>Patient Code</th>
-            <th>Patient Name</th>
-        </tr>
-        <tbody data-list="patient_details">
+        <thead>
             <tr>
-                <td data-list-parameter="patient_code"> </td>
-                <td data-list-parameter="full_name"> </td>
+                <th>Patient Code</th>
+                <th>Patient Name</th>
             </tr>
-        </tbody>
+        </thead>
+        <tbody data-list="patient_details" list-template="patientTable"></tbody>
+
     </table>
+    <script id="patientTable" type="text/x-algaeh-template">
+        <tr>
+            <td data-list-parameter="patient_code"></td>
+            <td data-list-parameter="full_name"></td>
+        </tr>
+    </script>
+
 </div>
