--- a/client/public/index.html
+++ b/client/public/index.html
@@ -42,6 +42,7 @@
   <div id="root"></div>
   <div id="searchWindow"></div>
   <div id="reportWindow"></div>
+  <div id="fullPageLoader"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
