--- a/client/public/Reports/patientRegistrationBarcode.html
+++ b/client/public/Reports/patientRegistrationBarcode.html
@@ -12,6 +12,6 @@
         <tbody data-list="patient_details" list-template="patientTable">""</tbody>
     </table>
     <script id="patientTable" type="text/x-algaeh-template">
-       <tr><td data-list-parameter="patient_code"></td><td data-list-parameter="full_name"></td></tr>
+       <tr><td data-list-parameter="patient_code">""</td><td data-list-parameter="full_name">""</td></tr>
     </script>
 </div>
