Sheet Level discount doen and added pharmacy designs

--- a/client/public/Reports/patientRegistrationBarcode.html
+++ b/client/public/Reports/patientRegistrationBarcode.html
@@ -1,8 +1,8 @@
 <div>
     <img data-barcode-parameter="patient_code" />
-    <p>Pateint Name</p>
-    <p data-parameter="full_name"></p>
-    <table>
+    <!-- <p>Pateint Name</p>
+    <p data-parameter="full_name"></p> -->
+    <!-- <table>
         <thead>
             <tr>
                 <th>PatientCode</th>
@@ -13,5 +13,5 @@
     </table>
     <script id="patientTable" type="text/x-algaeh-template">
        <tr><td data-list-parameter="patient_code">""</td><td data-list-parameter="full_name">""</td></tr>
-    </script>
+    </script> -->
 </div>
