--- a/client/public/Reports/printreceipt.html
+++ b/client/public/Reports/printreceipt.html
@@ -1,10 +1,9 @@
-<div>
-    <p>Pateint Code: <span data-parameter="patient_code"></span></p>
-    <!-- <p data-parameter="patient_code"></p> -->
-    <p>Pateint Name</p>
-    <p data-parameter="full_name"></p>
+<!--<div> <p>Pateint Code: <span data-parameter="patient_code"></span></p> -->
+<!-- <p data-parameter="patient_code"></p> -->
+<!-- <p>Pateint Name</p>
+    <p data-parameter="full_name"></p> -->
 
-    <p>Bill Date </p>
+<!-- <p>Bill Date </p>
     <p data-parameter="bill_date"></p>
     <table>
         <thead>
@@ -18,4 +17,123 @@
     <script id="patientTable" type="text/x-algaeh-template">
        <tr><td data-list-parameter="bill_type">""</td><td data-list-parameter="amount">""</td></tr>
     </script>
+</div> -->
+<!-- <tbody>
+    <tr>
+        <td>NCN00370</td>
+        <td class="co-4">Khalid Faiq Usman - New Visit</td>
+        <td>1</td>
+        <td>300.00</td>
+        <td> 0.00</td>
+        <td>300.00</td>
+        <td>300.00</td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td class="text-right">
+            <h5><strong>Total: </strong></h5>
+        </td>
+        <td class="text-right text-danger">
+            <h5><strong>300.00</strong></h5>
+        </td>
+    </tr>
+</tbody> -->
+<div>
+    <div class="cashReciptStyles">
+        <div class="col-lg-12 popRightDiv">
+
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="hospitalLogo">Hospital Logo</div>
+                </div>
+                <div class="col-lg-4">
+                    <h3 class="receipt-header">Cash Receipt</h3>
+                </div>
+                <div class="col-lg-4">
+                    <p class="hospitalAddress"># 301A, Curzon Square, Lady Curzon Road Opposite State Bank of India
+                        Bangalore Karnataka 560001 IN, Lady Curzon Rd, Shivaji Nagar, Bengaluru, Karnataka 560001</p>
+                </div>
+            </div>
+            <hr />
+            <div class="row receipt-header-mid">
+                <div class="table-responsive table-report">
+                    <table class="table table-sm">
+                        <tbody>
+                            <tr>
+                                <td>Patient Name:</td>
+                                <td data-parameter="full_name"></td>
+                                <td class="col"></td>
+                                <td>Cash Recepit:</td>
+                                <td data-parameter="receipt_number"></td>
+                            </tr>
+                            <tr>
+                                <td>Patient MRN:</td>
+                                <td data-parameter="patient_code"></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>Doctor Name:</td>
+                                <td data-parameter="doctor_name"></td>
+                                <td></td>
+                                <td>Recepit Date:</td>
+                                <td data-parameter="bill_date"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="table-responsive">
+                        <table class="table table-bordered table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Service</th>
+                                    <th>Qty</th>
+                                    <th>Unit Price</th>
+                                    <th>Discount</th>
+                                    <th>Deduction</th>
+                                    <th>Net Price</th>
+                                </tr>
+                            </thead>
+
+                            <tbody data-list="bill_details" list-template="patientTable"></tbody>
+
+                        </table>
+                        <script id="patientTable" type="text/x-algaeh-template">
+                            <tr>                            
+                            <td class="co-4" data-list-parameter="service_name"></td>
+                            <td data-list-parameter="quantity"></td>
+                            <td data-list-parameter="unit_cost"></td>
+                            <td data-list-parameter="discount_amout"></td>
+                            <td data-list-parameter="deductable_amount"></td>
+                            <td data-list-parameter="patient_payable"></td>
+                        </tr>
+                        </script>
+                    </div>
+                </div>
+            </div>
+            <div class="row receipt-header-mid">
+                <div class="table-responsive table-report">
+                    <table class="table table-sm">
+                        <tbody>
+                            <tr>
+                                <td>Person In-Charge:</td>
+                                <td>Aboobacker Sihdiqe</td>
+                                <td class="col"></td>
+                                <td>Person In-Charge Sign/ Seal:</td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
