Pharmacy Setup done

--- a/client/public/Reports/printreceipt.html
+++ b/client/public/Reports/printreceipt.html
@@ -99,6 +99,7 @@
                                     <th>Unit Price</th>
                                     <th>Discount</th>
                                     <th>Deduction</th>
+                                    <th>Tax</th>
                                     <th>Net Price</th>
                                 </tr>
                             </thead>
@@ -113,6 +114,7 @@
                             <td data-list-parameter="unit_cost"></td>
                             <td data-list-parameter="discount_amout"></td>
                             <td data-list-parameter="deductable_amount"></td>
+                            <td data-list-parameter="patient_tax"></td>
                             <td data-list-parameter="patient_payable"></td>
                         </tr>
                         </script>
