--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="css/font-awssome/all.min.css?v=001">
   <link rel="stylesheet" href="css/animate.min.css?v=001">
   <link rel="stylesheet" href="css/OpenSans.css?v=001">
-
+  <link rel="stylesheet" href="css/loader.css?v=001" />
 
   <title>ALGAEH HIMS</title>
 </head>
@@ -27,7 +27,13 @@
   <div id="root"></div>
   <div id="searchWindow"></div>
   <div id="reportWindow"></div>
-  <div id="fullPageLoader"></div>
+  <div id="fullPageLoader" class="d-none">
+    <div class="loader-container">
+      <div class="algaeh-progress float shadow">
+        <div class="progress__item">loading</div>
+      </div>
+    </div>
+  </div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
