Added new Summary Tab and its content in Doctor Workbench + Solved Error in console regarding P tag

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,9 @@
     crossorigin="anonymous"> -->
   <link rel="stylesheet" href="css/font-awssome/all.min.css?v=001">
   <link rel="stylesheet" href="css/animate.min.css?v=001">
-  <link rel="stylesheet" href="css/OpenSans.css?v=001">
+  <!-- <link rel="stylesheet" href="css/OpenSans.css?v=001"> -->
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700" rel="stylesheet">
+
   <link rel="stylesheet" href="css/loader.css?v=001" />
 
   <title>ALGAEH HIMS</title>
