--- a/client/public/Reports/cashCollection-details.html
+++ b/client/public/Reports/cashCollection-details.html
@@ -3,7 +3,7 @@
     <div class="col-lg-12">
         <div class="row">
             <div class="col-xs-4 col-sm-4 col-md-4">
-                <img src="http://placehold.it/160x100" class="img-responsive img-radio">
+                <img src="http://placehold.it/160x100" class="img-responsive img-radio"/>
             </div>
 
             <div class="col-xs-4 col-sm-4 col-md-4 text-center">
