--- a/client/public/Reports/cashCollection-summary.html
+++ b/client/public/Reports/cashCollection-summary.html
@@ -1,181 +1,201 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<head>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-</head>
-
-<body style="background: #f2f2f2;">
-    
+  <body style="background: #f2f2f2;">
     <div class="container" style="background: #ffffff;">
-            <br/>
-        <div class="col-lg-12">
-            <div class="row">
-                <div class="col-xs-4 col-sm-4 col-md-4">
-                   	<img src="http://placehold.it/160x100" class="img-responsive img-radio">
-                </div>
-                
-                <div class="col-xs-4 col-sm-4 col-md-4 text-center">
-                    <h1>Cash Collection</h1>
-                </div>
-                <div class="col-xs-4 col-sm-4 col-md-4 text-right">
-<!--
-                    <p>
-                        <em>From: 1st Nov, 2018 | To: 30th Nov, 2018</em>
-                    </p>
--->
-                </div>
-            <hr/>
-            </div>
-            <br/>
-            <div class="row">
-                <div class="text-center">
-                </div>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th class="text-center">Invoice No</th>
-                            <th class="text-center">Date</th>
-                            <th class="text-center">PIN./IP NO.</th>
-                            <th class="text-center">Patient Name</th>
-                            <th class="text-center">Provider</th>
-                            <th class="text-center">Entitlement</th>
-                            <th class="text-center">Gross Amount</th>
-                            <th class="text-center">Discount Amount</th>
-                            <th class="text-center">Cash Amount</th>
-                            <th class="text-center">Credit Amount</th>
-                            <th class="text-center">Total</th>  
-                        </tr>
-                    </thead>
-                    <tbody> <tr>
-                            <td class="text-center">IP</td>
-                            <td class="text-center"></td>
-                            <td class="text-center"></td>
-                            <td class="text-center"></td>
-                            <td class="text-center"></td>
-                            <td class="text-center">13:00</td>
-                            <td class="text-center">176538.17</td>
-                            <td class="text-center">680756.22</td>
-                            <td class="text-center">940321.22</td>
-                            <td class="text-center">1220321.00</td>
-                            <td class="text-center">1520321.16</td>  
-                        </tr>
-                         <tr>
-                            <td class="text-center">OP</td>
-                            <td class="text-center"></td>
-                            <td class="text-center"></td>
-                            <td class="text-center"></td>
-                            <td class="text-center"></td>
-                            <td class="text-center">13:00</td>
-                            <td class="text-center">176538.17</td>
-                            <td class="text-center">680756.22</td>
-                            <td class="text-center">940321.22</td>
-                            <td class="text-center">1220321.00</td>
-                            <td class="text-center">1520321.16</td>  
-                        </tr>
-                         <tr>
-                            <td class="text-center">POS</td>
-                            <td class="text-center"></td>
-                            <td class="text-center"></td>
-                            <td class="text-center"></td>
-                            <td class="text-center"></td>
-                            <td class="text-center">13:00</td>
-                            <td class="text-center">176538.17</td>
-                            <td class="text-center">680756.22</td>
-                            <td class="text-center">940321.22</td>
-                            <td class="text-center">1220321.00</td>
-                            <td class="text-center">1520321.16</td>  
-                        </tr>
-                         <tr>
-                            <td class="text-center">POS Return</td>
-                            <td class="text-center"></td>
-                            <td class="text-center"></td>
-                            <td class="text-center"></td>
-                            <td class="text-center"></td>
-                            <td class="text-center">13:00</td>
-                            <td class="text-center">176538.17</td>
-                            <td class="text-center">680756.22</td>
-                            <td class="text-center">940321.22</td>
-                            <td class="text-center">1220321.00</td>
-                            <td class="text-center">1520321.16</td>  
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <br/>
-            <div class="row" style="border:1px solid #ccc; margin-bottom:10px;">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th class="text-center"></th>
-                            <th class="text-center">Total Patient</th>
-                            <th class="text-center">Gross Amount</th>
-                            <th class="text-center">Discount Amount</th>
-                            <th class="text-center">Cash</th>
-                            <th class="text-center">Credit</th>
-                            <th class="text-center">Net Amount</th>
-                        </tr>
-                    </thead>
-                    <tbody> <tr>
-                            <td class="text-center">In Patient</td>
-                            <td class="text-center">13</td>
-                            <td class="text-center">176539.17</td>
-                            <td class="text-center">13076.19</td>
-                            <td class="text-center">68423.81</td>
-                            <td class="text-center">94038.17</td>
-                            <td class="text-center">168879.89</td>
-                        </tr> <tr>
-                            <td class="text-center">Out Patient</td>
-                            <td class="text-center">13</td>
-                            <td class="text-center">176539.17</td>
-                            <td class="text-center">13076.19</td>
-                            <td class="text-center">68423.81</td>
-                            <td class="text-center">94038.17</td>
-                            <td class="text-center">168879.89</td>
-                        </tr> <tr>
-                            <td class="text-center">Pharmacy</td>
-                            <td class="text-center">13</td>
-                            <td class="text-center">176539.17</td>
-                            <td class="text-center">13076.19</td>
-                            <td class="text-center">68423.81</td>
-                            <td class="text-center">94038.17</td>
-                            <td class="text-center">168879.89</td>
-                        </tr> <tr>
-                            <td class="text-center">OP Refund</td>
-                            <td class="text-center">13</td>
-                            <td class="text-center">176539.17</td>
-                            <td class="text-center">13076.19</td>
-                            <td class="text-center">68423.81</td>
-                            <td class="text-center">94038.17</td>
-                            <td class="text-center">168879.89</td>
-                        </tr> <tr>
-                            <td class="text-center">Pharmacy Refund</td>
-                            <td class="text-center">13</td>
-                            <td class="text-center">176539.17</td>
-                            <td class="text-center">13076.19</td>
-                            <td class="text-center">68423.81</td>
-                            <td class="text-center">94038.17</td>
-                            <td class="text-center">168879.89</td>
-                        </tr> <tr>
-                            <td class="text-center">Total</td>
-                            <td class="text-center">13</td>
-                            <td class="text-center">176539.17</td>
-                            <td class="text-center">13076.19</td>
-                            <td class="text-center">68423.81</td>
-                            <td class="text-center">94038.17</td>
-                            <td class="text-center">168879.89</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-</div>
-</div>
-</body>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
- crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
- crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
- crossorigin="anonymous"></script>
+      <br />
+      <div class="col-lg-12">
+        <div class="row">
+          <div class="col-xs-4 col-sm-4 col-md-4">
+            <img
+              src="http://placehold.it/160x100"
+              class="img-responsive img-radio"
+            />
+          </div>
 
+          <div class="col-xs-4 col-sm-4 col-md-4 text-center">
+            <h1>Cash Collection</h1>
+          </div>
+          <div class="col-xs-4 col-sm-4 col-md-4 text-right">
+            <!--
+              <p>
+                  <em>From: 1st Nov, 2018 | To: 30th Nov, 2018</em>
+              </p>
+            -->
+          </div>
+          <hr />
+        </div>
+        <br />
+        <div class="row">
+          <div class="text-center"></div>
+          <table class="table">
+            <thead>
+              <tr>
+                <th class="text-center">Invoice No</th>
+                <th class="text-center">Date</th>
+                <th class="text-center">PIN./IP NO.</th>
+                <th class="text-center">Patient Name</th>
+                <th class="text-center">Provider</th>
+                <th class="text-center">Entitlement</th>
+                <th class="text-center">Gross Amount</th>
+                <th class="text-center">Discount Amount</th>
+                <th class="text-center">Cash Amount</th>
+                <th class="text-center">Credit Amount</th>
+                <th class="text-center">Total</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="text-center">IP</td>
+                <td class="text-center"></td>
+                <td class="text-center"></td>
+                <td class="text-center"></td>
+                <td class="text-center"></td>
+                <td class="text-center">13:00</td>
+                <td class="text-center">176538.17</td>
+                <td class="text-center">680756.22</td>
+                <td class="text-center">940321.22</td>
+                <td class="text-center">1220321.00</td>
+                <td class="text-center">1520321.16</td>
+              </tr>
+              <tr>
+                <td class="text-center">OP</td>
+                <td class="text-center"></td>
+                <td class="text-center"></td>
+                <td class="text-center"></td>
+                <td class="text-center"></td>
+                <td class="text-center">13:00</td>
+                <td class="text-center">176538.17</td>
+                <td class="text-center">680756.22</td>
+                <td class="text-center">940321.22</td>
+                <td class="text-center">1220321.00</td>
+                <td class="text-center">1520321.16</td>
+              </tr>
+              <tr>
+                <td class="text-center">POS</td>
+                <td class="text-center"></td>
+                <td class="text-center"></td>
+                <td class="text-center"></td>
+                <td class="text-center"></td>
+                <td class="text-center">13:00</td>
+                <td class="text-center">176538.17</td>
+                <td class="text-center">680756.22</td>
+                <td class="text-center">940321.22</td>
+                <td class="text-center">1220321.00</td>
+                <td class="text-center">1520321.16</td>
+              </tr>
+              <tr>
+                <td class="text-center">POS Return</td>
+                <td class="text-center"></td>
+                <td class="text-center"></td>
+                <td class="text-center"></td>
+                <td class="text-center"></td>
+                <td class="text-center">13:00</td>
+                <td class="text-center">176538.17</td>
+                <td class="text-center">680756.22</td>
+                <td class="text-center">940321.22</td>
+                <td class="text-center">1220321.00</td>
+                <td class="text-center">1520321.16</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <br />
+        <div class="row" style="border:1px solid #ccc; margin-bottom:10px;">
+          <table class="table">
+            <thead>
+              <tr>
+                <th class="text-center"></th>
+                <th class="text-center">Total Patient</th>
+                <th class="text-center">Gross Amount</th>
+                <th class="text-center">Discount Amount</th>
+                <th class="text-center">Cash</th>
+                <th class="text-center">Credit</th>
+                <th class="text-center">Net Amount</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="text-center">In Patient</td>
+                <td class="text-center">13</td>
+                <td class="text-center">176539.17</td>
+                <td class="text-center">13076.19</td>
+                <td class="text-center">68423.81</td>
+                <td class="text-center">94038.17</td>
+                <td class="text-center">168879.89</td>
+              </tr>
+              <tr>
+                <td class="text-center">Out Patient</td>
+                <td class="text-center">13</td>
+                <td class="text-center">176539.17</td>
+                <td class="text-center">13076.19</td>
+                <td class="text-center">68423.81</td>
+                <td class="text-center">94038.17</td>
+                <td class="text-center">168879.89</td>
+              </tr>
+              <tr>
+                <td class="text-center">Pharmacy</td>
+                <td class="text-center">13</td>
+                <td class="text-center">176539.17</td>
+                <td class="text-center">13076.19</td>
+                <td class="text-center">68423.81</td>
+                <td class="text-center">94038.17</td>
+                <td class="text-center">168879.89</td>
+              </tr>
+              <tr>
+                <td class="text-center">OP Refund</td>
+                <td class="text-center">13</td>
+                <td class="text-center">176539.17</td>
+                <td class="text-center">13076.19</td>
+                <td class="text-center">68423.81</td>
+                <td class="text-center">94038.17</td>
+                <td class="text-center">168879.89</td>
+              </tr>
+              <tr>
+                <td class="text-center">Pharmacy Refund</td>
+                <td class="text-center">13</td>
+                <td class="text-center">176539.17</td>
+                <td class="text-center">13076.19</td>
+                <td class="text-center">68423.81</td>
+                <td class="text-center">94038.17</td>
+                <td class="text-center">168879.89</td>
+              </tr>
+              <tr>
+                <td class="text-center">Total</td>
+                <td class="text-center">13</td>
+                <td class="text-center">176539.17</td>
+                <td class="text-center">13076.19</td>
+                <td class="text-center">68423.81</td>
+                <td class="text-center">94038.17</td>
+                <td class="text-center">168879.89</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </body>
+  <script
+    src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"
+  ></script>
 </html>
