--- a/client/public/index.html
+++ b/client/public/index.html
@@ -48,17 +48,9 @@
           <div class="progress__item">loading</div>
         </div>
       </div>
+      <div id="algaeh_model_Popup"></div>
     </div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
     <script>
       window.onpopstate = function(event) {
         window.history.go(1);
