--- a/client/public/index.html
+++ b/client/public/index.html
@@ -56,5 +56,17 @@
         window.history.go(1);
       };
     </script>
+    <script
+      type="text/javascript"
+      src="https://api.yamli.com/js/yamli_api.js"
+    ></script>
+    <script type="text/javascript">
+      if (
+        typeof Yamli == "object" &&
+        Yamli.init({ uiLanguage: "ar", startMode: "onOrUserDefault" })
+      ) {
+        Yamli.yamlifyClass("myIput", { settingsPlacement: "inside" });
+      }
+    </script>
   </body>
 </html>
