--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,14 +11,14 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.webp" />
 
-    <link rel="stylesheet" href="css/Bootstrap.css?v=001" />
+    <link rel="stylesheet" href="css/Bootstrap.css" />
     <!--
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
       crossorigin="anonymous">
     -->
-    <link rel="stylesheet" href="css/font-awssome/all.min.css?v=001" />
-    <link rel="stylesheet" href="css/animate.min.css?v=001" />
-    <!-- <link rel="stylesheet" href="css/OpenSans.css?v=001"> -->
+    <link rel="stylesheet" href="css/font-awssome/all.min.css" />
+    <link rel="stylesheet" href="css/animate.min.css" />
+    <!-- <link rel="stylesheet" href="css/OpenSans.css"> -->
 
     <link
       href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700"
@@ -32,7 +32,7 @@
       />
     -->
 
-    <link rel="stylesheet" href="css/loader.css?v=001" />
+    <link rel="stylesheet" href="css/loader.css" />
 
     <title>ALGAEH HIMS</title>
   </head>
