dropdown auto suggestion remove

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -39,10 +39,10 @@
 
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
-    <div id="root"></div>
-    <div id="algaeh_model_Popup"></div>
-    <div id="searchWindow"></div>
-    <div id="reportWindow"></div>
+    <div id="root" autoComplete="new-password"></div>
+    <div id="algaeh_model_Popup" autoComplete="new-password"></div>
+    <div id="searchWindow" autoComplete="new-password"></div>
+    <div id="reportWindow" autoComplete="new-password"></div>
     <div id="fullPageLoader" class="d-none">
       <div class="loader-container">
         <div class="algaeh-progress float shadow">
