--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,12 @@
       href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700"
       rel="stylesheet"
     />
-
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="print"
+      href="css/algaeh-print.css"
+    />
     <!--
       <link
         href="https://fonts.googleapis.com/css?family=Nunito:400,600,700"
