changes with semantic ui

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,6 +30,10 @@
       media="print"
       href="css/algaeh-print.css"
     />
+    <link
+      rel="stylesheet"
+      href="http://cdn.jsdelivr.net/npm/semantic-ui@2.4.1/dist/semantic.min.css"
+    />
     <!--
       <link
         href="https://fonts.googleapis.com/css?family=Nunito:400,600,700"
