Added Semantic UI offline and its required Fonts

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,10 +20,7 @@
     <link rel="stylesheet" href="css/animate.min.css" />
     <!-- <link rel="stylesheet" href="css/OpenSans.css"> -->
 
-    <link
-      rel="stylesheet"
-      href="http://cdn.jsdelivr.net/npm/semantic-ui@2.4.1/dist/semantic.min.css"
-    />
+    <link rel="stylesheet" type="text/css" href="./css/semantic.min.css" />
     <!-- <link
       href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700"
       rel="stylesheet"
