--- a/client/public/index.html
+++ b/client/public/index.html
@@ -40,7 +40,10 @@
 
     <link rel="stylesheet" href="css/loader.css" />
 
-    <title>ALGAEH HIMS</title>
+    <title>
+      Algaeh - A complete integration across departments, comprehensive reports
+      and a workflow from registration to billing provide a complete product.
+    </title>
   </head>
 
   <body>
