Added Patient ID Card UI

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#00A796" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.webp" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
 
     <link rel="stylesheet" href="css/Bootstrap.css" />
     <!--
